fix contrast errors

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -103,7 +103,7 @@ main {
         font-weight: 900;
         text-decoration: inherit;
         /*--adjust as necessary--*/
-        color: $grayLight;
+        color: $gray;
         font-size: 70%;
         padding-left: 0.5em;
         vertical-align: 10%;
