--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -4,7 +4,7 @@ $black: #111;
 $grayDarkest: #222;
 $grayDarker: #383838;
 $grayDark: #444;
-$gray: #666;
+$gray: #585858;
 $grayLight: #999;
 $grayLighter: #ccc;
 $grayLightest: #e1e1e1;
